# MonkeTyper

./: CMakeLists.txt  README.md
assets/: words.txt
include/: font.h  game.h  window.h
src/: font.cpp  game.cpp  main.cpp  window.cpp
